--- a/parpose.html
+++ b/parpose.html
@@ -84,7 +84,7 @@
 </head>
 <body>
 
-<audio id="bgMusic" src="song.mp3" preload="auto"></audio>
+<audio id="bgMusic" src="music.mpeg" preload="auto"></audio>
 
 <!-- Step 1: Password -->
 <div class="step active" id="step1">
@@ -110,9 +110,9 @@
 <!-- Step 4: Photos Screen 1 -->
 <div class="step" id="step4">
   <h1>Photos</h1>
-  <img src="pic1.jpg" class="gallery-img active">
-  <img src="pic2.jpg" class="gallery-img">
-  <img src="pic3.jpg" class="gallery-img">
+  <img src="IMG1.JPG" class="gallery-img active">
+  <img src="IMG2.JPG" class="gallery-img">
+  <img src="IMG3.JPG" class="gallery-img">
   <button onclick="nextStep(5)">Next</button>
 </div>
 
@@ -138,10 +138,10 @@
 <!-- Step 8: Photos Screen 2 -->
 <div class="step" id="step8">
   <h1>More Memories 📸</h1>
-  <img src="pic4.jpg" class="gallery-img active">
-  <img src="pic5.jpg" class="gallery-img">
-  <img src="pic6.jpg" class="gallery-img">
-  <img src="pic7.jpg" class="gallery-img">
+  <img src="IMG4.JPG" class="gallery-img active">
+  <img src="IMG5.JPG" class="gallery-img">
+  <img src="IMG6.JPG" class="gallery-img">
+  <img src="IMG7.JPG" class="gallery-img">
   <button onclick="nextStep(9)">Next</button>
 </div>
 
